# tiniclaw

./: .gitignore  CMakeLists.txt  README.md  make_stubs.py
include/: agent.h  arena.h  channel.h  config.h  gateway.h  memory.h  net_security.h  platform.h  provider.h  security.h  tiniclaw.h  tool.h  util.h  version.h
src/: arena.c  auth.c  bus.c  config.c  cost.c  cron.c  daemon.c  doctor.c  gateway.c  hardware.c  health.c  heartbeat.c  identity.c  main.c  mcp.c  migration.c  net_security.c  observability.c  onboard.c  peripherals.c  platform.c  rag.c  runtime.c  service.c  session.c  skills.c  status.c  subagent.c  tunnel.c  util.c  version.c  voice.c
src/agent/: agent.c  compaction.c  dispatcher.c  memory_loader.c  prompt.c
src/channels/: channel.c  channel_stubs.c  telegram.c
src/memory/: cache.c  embeddings.c  hygiene.c  memory.c  snapshot.c  sqlite_mem.c  vector.c
src/providers/: anthropic.c  compatible.c  factory.c  gemini.c  ollama.c  openai.c  openrouter.c  provider.c  reliable.c  router.c  scrub.c  sse.c
src/security/: pairing.c  secrets.c
src/tools/: file_tools.c  git.c  http_request.c  memory_tools.c  misc_tools.c  shell.c  tool.c
tests/: CMakeLists.txt
